crates/caffeine-ls/tests/snapshots/lsp_snapshots__deprecation_diagnostics.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: "(default_items, linted_items)"
---
[
  [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 10
        },
        "end": {
          "line": 4,
          "character": 14
        }
      },
      "severity": 2,
      "code": "compiler.warn.has.been.deprecated.for.removal",
      "source": "caffeine-ls",
      "message": "stop() in Thread has been deprecated and marked for removal"
    }
  ],
  [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 10
        },
        "end": {
          "line": 4,
          "character": 14
        }
      },
      "severity": 2,
      "code": "compiler.warn.has.been.deprecated.for.removal",
      "source": "caffeine-ls",
      "message": "stop() in Thread has been deprecated and marked for removal"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 10
        },
        "end": {
          "line": 5,
          "character": 15
        }
      },
      "severity": 2,
      "code": "compiler.warn.has.been.deprecated",
      "source": "caffeine-ls",
      "message": "getId() in Thread has been deprecated"
    }
  ]
]
