crates/caffeine-ls/tests/snapshots/lsp_snapshots__goto_definition_annotation_pairs.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: normalized
---
[
  {
    "at": "name = \"x\"",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 19,
            "character": 11
          },
          "end": {
            "line": 19,
            "character": 15
          }
        }
      }
    ]
  },
  {
    "at": "count = FLAG",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 21,
            "character": 8
          },
          "end": {
            "line": 21,
            "character": 13
          }
        }
      }
    ]
  },
  {
    "at": "type = Consts.class",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 23,
            "character": 13
          },
          "end": {
            "line": 23,
            "character": 17
          }
        }
      }
    ]
  },
  {
    "at": "mode = FAST",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 25,
            "character": 9
          },
          "end": {
            "line": 25,
            "character": 13
          }
        }
      }
    ]
  },
  {
    "at": "inner = @Inner",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 27,
            "character": 10
          },
          "end": {
            "line": 27,
            "character": 15
          }
        }
      }
    ]
  },
  {
    "at": "nums2 = @Nums",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 31,
            "character": 9
          },
          "end": {
            "line": 31,
            "character": 14
          }
        }
      }
    ]
  },
  {
    "at": "count = LOCAL",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 21,
            "character": 8
          },
          "end": {
            "line": 21,
            "character": 13
          }
        }
      }
    ]
  },
  {
    "at": "mode = Mode.SLOW",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 25,
            "character": 9
          },
          "end": {
            "line": 25,
            "character": 13
          }
        }
      }
    ]
  },
  {
    "at": "value = \"y\"",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 11,
            "character": 11
          },
          "end": {
            "line": 11,
            "character": 16
          }
        }
      }
    ]
  },
  {
    "at": "LOCAL }",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 48,
            "character": 21
          },
          "end": {
            "line": 48,
            "character": 26
          }
        }
      }
    ]
  },
  {
    "at": "FLAG,",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 17,
            "character": 8
          },
          "end": {
            "line": 17,
            "character": 12
          }
        }
      }
    ]
  },
  {
    "at": "FAST,",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 6,
            "character": 4
          },
          "end": {
            "line": 6,
            "character": 8
          }
        }
      }
    ]
  },
  {
    "at": "CONST }",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 35,
            "character": 21
          },
          "end": {
            "line": 35,
            "character": 26
          }
        }
      }
    ]
  },
  {
    "at": "Mode.SLOW",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 5,
            "character": 5
          },
          "end": {
            "line": 5,
            "character": 9
          }
        }
      }
    ]
  },
  {
    "at": "SLOW,",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 7,
            "character": 4
          },
          "end": {
            "line": 7,
            "character": 8
          }
        }
      }
    ]
  },
  {
    "at": "Consts.class",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 34,
            "character": 6
          },
          "end": {
            "line": 34,
            "character": 12
          }
        }
      }
    ]
  },
  {
    "at": "Inner(value",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 10,
            "character": 11
          },
          "end": {
            "line": 10,
            "character": 16
          }
        }
      }
    ]
  },
  {
    "at": "Nums()",
    "definition": [
      {
        "uri": "file://<WORKSPACE_ROOT>/src/com/example/Anns.java",
        "range": {
          "start": {
            "line": 14,
            "character": 11
          },
          "end": {
            "line": 14,
            "character": 15
          }
        }
      }
    ]
  },
  {
    "at": "\"x\"",
    "definition": null
  }
]
