crates/caffeine-ls/tests/snapshots/lsp_snapshots__hover_class_declaration.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```java\nclass Nav\n```\n\nA documented class.\n\nSecond paragraph."
  }
}
