crates/caffeine-ls/tests/snapshots/lsp_snapshots__hover_expression.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
assertion_line: 621
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```java\nint\n```"
  }
}
