crates/caffeine-ls/tests/snapshots/lsp_snapshots__hover_method_declaration.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```java\ncompute(): int\n```\n\nComputes the count.\n\n**Returns:** the count"
  }
}
