crates/caffeine-ls/tests/snapshots/lsp_snapshots__hover_record_component.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: rows
---
[
  [
    "header x",
    "```java\nx: int\n```"
  ],
  [
    "field x",
    "```java\nint\n```"
  ],
  [
    "accessor x",
    "```java\nint\n```"
  ]
]
